[gd_scene load_steps=3 format=3 uid="uid://ctum3uogksbaf"]

[ext_resource type="Script" uid="uid://bmjbw5rls558r" path="res://ui/rewind_menu/rewind_menu.gd" id="1_sousa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvqp4"]
bg_color = Color(1, 0, 1, 0.498039)

[node name="Rewind" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kvqp4")
script = ExtResource("1_sousa")

[node name="TopPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 5.0
offset_right = 210.0
offset_bottom = 45.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel"]
layout_mode = 2

[node name="PhaseLabel" type="Label" parent="TopPanel/HBoxContainer"]
layout_mode = 2
text = "Phase"

[node name="VBoxContainer" type="GridContainer" parent="TopPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/v_separation = 0
columns = 2

[node name="TurnLabel" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Turn: "

[node name="TurnNumber" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[node name="ReadyUnitsLabel" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Ready Units: "

[node name="ReadyUnitsNumber" type="Label" parent="TopPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "17"

[node name="ActionScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.333
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="ActionScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionVBox" type="VBoxContainer" parent="ActionScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_constants/separation = 3

[node name="BottomPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 259.0
offset_right = 97.0
offset_bottom = 281.0

[node name="CostLabel" type="Label" parent="BottomPanel"]
layout_mode = 2
text = "Charges: "
